# n64recomp-mod-custom-and-build-scripting

./: README.md  project.py
EXAMPLES/nrm_and_zig+llvm_extlib/: project.py
EXAMPLES/nrm_and_zig_extlib/: project.py
EXAMPLES/nrm_only/: README.md
files/: CMakeLists.txt
files/EXAMPLES/nrm_and_zig_extlib/: project.py
files/py/modbuildcore/: tomls.py
files/src/: extlib_example.c
